Fix styles, remove text-wrap: pretty for P tag

--- a/src/reset.scss
+++ b/src/reset.scss
@@ -31,8 +31,9 @@ p, h1, h2, h3, h4, h5, h6 {
 }
 
 p {
-  text-wrap: pretty;
+  /* text-wrap: pretty;*/
 }
+
 h1, h2, h3, h4, h5, h6 {
   text-wrap: balance;
 }
